--- a/LearningUISplitView/LearningUISplitView/Base.lproj/Main.storyboard
+++ b/LearningUISplitView/LearningUISplitView/Base.lproj/Main.storyboard
@@ -19,8 +19,8 @@
                                 <rect key="frame" x="192" y="320" width="384" height="384"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="30b-FY-7uH">
-                                <rect key="frame" x="363" y="712" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="358" y="712" width="52.5" height="26.5"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -45,7 +45,7 @@
             </objects>
             <point key="canvasLocation" x="2154" y="455"/>
         </scene>
-        <!--Root View Controller-->
+        <!--MeMoji-->
         <scene sceneID="XP4-cy-1RT">
             <objects>
                 <tableViewController clearsSelectionOnViewWillAppear="NO" id="RR1-L5-S39" customClass="MasterViewController" customModule="LearningUISplitView" customModuleProvider="target" sceneMemberID="viewController">
@@ -78,7 +78,7 @@
                             <outlet property="delegate" destination="RR1-L5-S39" id="BBk-L1-uZW"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="FXw-Hz-I8f"/>
+                    <navigationItem key="navigationItem" title="MeMoji" id="FXw-Hz-I8f"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6eo-gA-pDs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
