--- a/LearningUISplitView/LearningUISplitView/Base.lproj/Main.storyboard
+++ b/LearningUISplitView/LearningUISplitView/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Detail View Controller-->
+        <!--Name-->
         <scene sceneID="BqP-M6-4ue">
             <objects>
                 <viewController id="cLe-Ua-cwQ" customClass="DetailViewController" customModule="LearningUISplitView" customModuleProvider="target" sceneMemberID="viewController">
@@ -18,32 +18,24 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1eD-Gv-aPD">
                                 <rect key="frame" x="192" y="320" width="384" height="384"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="30b-FY-7uH">
-                                <rect key="frame" x="358" y="712" width="52.5" height="26.5"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="1eD-Gv-aPD" firstAttribute="centerX" secondItem="KKR-P9-fbg" secondAttribute="centerX" id="0ne-ia-Lhi"/>
-                            <constraint firstItem="30b-FY-7uH" firstAttribute="centerX" secondItem="KKR-P9-fbg" secondAttribute="centerX" id="CWx-tm-8Ws"/>
                             <constraint firstItem="1eD-Gv-aPD" firstAttribute="width" secondItem="KKR-P9-fbg" secondAttribute="width" multiplier="0.5" id="DLr-px-yQq"/>
                             <constraint firstItem="1eD-Gv-aPD" firstAttribute="centerY" secondItem="KKR-P9-fbg" secondAttribute="centerY" id="GcE-nX-2vw"/>
-                            <constraint firstItem="30b-FY-7uH" firstAttribute="top" secondItem="1eD-Gv-aPD" secondAttribute="bottom" constant="8" id="gUP-Z7-536"/>
                             <constraint firstItem="1eD-Gv-aPD" firstAttribute="height" secondItem="KKR-P9-fbg" secondAttribute="width" multiplier="0.5" id="jdC-a9-7au"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="8Iv-nj-5iH"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Name" id="bLc-pX-sNh"/>
                     <connections>
                         <outlet property="imageView" destination="1eD-Gv-aPD" id="vF4-pX-4na"/>
-                        <outlet property="nameLabel" destination="30b-FY-7uH" id="bxQ-rT-eiD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EIn-67-B8S" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2154" y="455"/>
+            <point key="canvasLocation" x="2919.53125" y="454.68749999999994"/>
         </scene>
         <!--MeMoji-->
         <scene sceneID="XP4-cy-1RT">
@@ -106,12 +98,30 @@
                 <splitViewController id="tBM-oz-xPa" sceneMemberID="viewController">
                     <connections>
                         <segue destination="Cp6-GT-JBS" kind="relationship" relationship="masterViewController" id="dan-VN-66V"/>
-                        <segue destination="cLe-Ua-cwQ" kind="relationship" relationship="detailViewController" id="UFi-uC-PYF"/>
+                        <segue destination="j4p-Au-NqG" kind="relationship" relationship="detailViewController" id="UFi-uC-PYF"/>
                     </connections>
                 </splitViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="geS-HS-E2C" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1233" y="129"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="d5A-uh-96e">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="j4p-Au-NqG" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="slE-AI-Nuj">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="50"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="cLe-Ua-cwQ" kind="relationship" relationship="rootViewController" id="bVM-J8-9Ue"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xhp-X7-cpc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2153.90625" y="454.68749999999994"/>
         </scene>
     </scenes>
 </document>
